examples/test/testpolicy10037.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10037
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key47: value0
      key9: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value4
          key25: value38
          key11: value9
      podSelector:
        matchLabels:
          key30: value36
